--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       <section class="hero">
         <div class="hero-container container">
           <h1 class="main-title">Эффективные решения<br />для вашего бизнеса</h1>
-          <button class="button" type="button">Заказать услугу</button>
+          <button class="button" type="button" data-modal-open>Заказать услугу</button>
         </div>
       </section>
       <!--main features-->
@@ -112,6 +112,7 @@
                 width="370"
                 height="294"
               />
+              <h3 class="work_process_subtitle">Десктопные приложения</h3>
             </li>
             <li class="work-process-item">
               <img
@@ -121,6 +122,7 @@
                 width="370"
                 height="294"
               />
+              <h3 class="work_process_subtitle">Мобильные приложения</h3>
             </li>
             <li class="work-process-item">
               <img
@@ -130,6 +132,7 @@
                 width="370"
                 height="294"
               />
+              <h3 class="work_process_subtitle">Дизайнерские решения</h3>
             </li>
           </ul>
         </div>
@@ -426,5 +429,15 @@
         </div>
       </div>
     </footer>
+    <div class="backdrop is-hidden" data-modal>
+      <div class="modal">
+        <button type="button" class="modal-close-btn" data-modal-close>
+          <svg class="modal-icon-close" width="18" height="18">
+            <use href="./images/icons.svg#icon-close"></use>
+          </svg>
+        </button>
+      </div>
+    </div>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
