--- a/portfolio.html
+++ b/portfolio.html
@@ -85,14 +85,22 @@
 
           <ul class="portfolio-list list">
             <li class="portfolio-item">
-              <a href="" class="portfolio-link link"
-                ><img
-                  class="portfolio-img"
-                  src="./images/portfolio/technocrack.jpg"
-                  alt="ноутбук"
-                  width="370"
-                  height="294"
-                />
+              <a href="" class="portfolio-link link">
+                <div class="portfolio-img-overlay">
+                  <img
+                    class="portfolio-img"
+                    src="./images/portfolio/technocrack.jpg"
+                    alt="ноутбук"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="portfolio-overlay">
+                    Технокряк это современная площадка распространения коронавируса. Компании
+                    используют эту платформу для цифрового шпионажа и атак на защищённые сервера
+                    конкурентов.
+                  </p>
+                </div>
+
                 <div class="portfolio-info">
                   <h3 class="portfolio-name">Технокряк</h3>
                   <p class="portfolio-type">Веб-сайт</p>
@@ -100,14 +108,22 @@
               </a>
             </li>
             <li class="portfolio-item">
-              <a href="" class="portfolio-link link"
-                ><img
-                  class="portfolio-img"
-                  src="./images/portfolio/basketball.jpg"
-                  alt=",баскетболисты"
-                  width="370"
-                  height="294"
-                />
+              <a href="" class="portfolio-link link">
+                <div class="portfolio-img-overlay">
+                  <img
+                    class="portfolio-img"
+                    src="./images/portfolio/basketball.jpg"
+                    alt=",баскетболисты"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="portfolio-overlay">
+                    Технокряк это современная площадка распространения коронавируса. Компании
+                    используют эту платформу для цифрового шпионажа и атак на защищённые сервера
+                    конкурентов.
+                  </p>
+                </div>
+
                 <div class="portfolio-info">
                   <h3 class="portfolio-name">Постер New Orlean vs Golden Star</h3>
                   <p class="portfolio-type">Дизайн</p>
@@ -115,14 +131,22 @@
               </a>
             </li>
             <li class="portfolio-item">
-              <a href="" class="portfolio-link link"
-                ><img
-                  class="portfolio-img"
-                  src="./images/portfolio/seafood.jpg"
-                  alt="логотип seafood"
-                  width="370"
-                  height="294"
-                />
+              <a href="" class="portfolio-link link">
+                <div class="portfolio-img-overlay">
+                  <img
+                    class="portfolio-img"
+                    src="./images/portfolio/seafood.jpg"
+                    alt="логотип seafood"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="portfolio-overlay">
+                    Технокряк это современная площадка распространения коронавируса. Компании
+                    используют эту платформу для цифрового шпионажа и атак на защищённые сервера
+                    конкурентов.
+                  </p>
+                </div>
+
                 <div class="portfolio-info">
                   <h3 class="portfolio-name">Ресторан Seafood</h3>
                   <p class="portfolio-type">Приложение</p>
@@ -130,14 +154,22 @@
               </a>
             </li>
             <li class="portfolio-item">
-              <a href="" class="portfolio-link link"
-                ><img
-                  class="portfolio-img"
-                  src="./images/portfolio/prime.jpg"
-                  alt="наушники"
-                  width="370"
-                  height="294"
-                />
+              <a href="" class="portfolio-link link">
+                <div class="portfolio-img-overlay">
+                  <img
+                    class="portfolio-img"
+                    src="./images/portfolio/prime.jpg"
+                    alt="наушники"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="portfolio-overlay">
+                    Технокряк это современная площадка распространения коронавируса. Компании
+                    используют эту платформу для цифрового шпионажа и атак на защищённые сервера
+                    конкурентов.
+                  </p>
+                </div>
+
                 <div class="portfolio-info">
                   <h3 class="portfolio-name">Проект Prime</h3>
                   <p class="portfolio-type">Маркетинг</p>
@@ -145,14 +177,22 @@
               >
             </li>
             <li class="portfolio-item">
-              <a href="" class="portfolio-link link"
-                ><img
-                  class="portfolio-img"
-                  src="./images/portfolio/boxes.jpg"
-                  alt="коробки"
-                  width="370"
-                  height="294"
-                />
+              <a href="" class="portfolio-link link">
+                <div class="portfolio-img-overlay">
+                  <img
+                    class="portfolio-img"
+                    src="./images/portfolio/boxes.jpg"
+                    alt="коробки"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="portfolio-overlay">
+                    Технокряк это современная площадка распространения коронавируса. Компании
+                    используют эту платформу для цифрового шпионажа и атак на защищённые сервера
+                    конкурентов.
+                  </p>
+                </div>
+
                 <div class="portfolio-info">
                   <h3 class="portfolio-name">Проект</h3>
                   <p class="portfolio-type">Приложение</p>
@@ -160,14 +200,22 @@
               >
             </li>
             <li class="portfolio-item">
-              <a href="" class="portfolio-link link"
-                ><img
-                  class="portfolio-img"
-                  src="./images/portfolio/no_bodrers_site.jpg"
-                  alt="персональный компьютер"
-                  width="370"
-                  height="294"
-                />
+              <a href="" class="portfolio-link link">
+                <div class="portfolio-img-overlay">
+                  <img
+                    class="portfolio-img"
+                    src="./images/portfolio/no_bodrers_site.jpg"
+                    alt="персональный компьютер"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="portfolio-overlay">
+                    Технокряк это современная площадка распространения коронавируса. Компании
+                    используют эту платформу для цифрового шпионажа и атак на защищённые сервера
+                    конкурентов.
+                  </p>
+                </div>
+
                 <div class="portfolio-info">
                   <h3 class="portfolio-name">Inspiration has no Borders</h3>
                   <p class="portfolio-type">Веб-сайт</p>
@@ -175,14 +223,22 @@
               >
             </li>
             <li class="portfolio-item">
-              <a href="" class="portfolio-link link"
-                ><img
-                  class="portfolio-img"
-                  src="./images/portfolio/limited_edition.jpg"
-                  alt="книга"
-                  width="370"
-                  height="294"
-                />
+              <a href="" class="portfolio-link link">
+                <div class="portfolio-img-overlay">
+                  <img
+                    class="portfolio-img"
+                    src="./images/portfolio/limited_edition.jpg"
+                    alt="книга"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="portfolio-overlay">
+                    Технокряк это современная площадка распространения коронавируса. Компании
+                    используют эту платформу для цифрового шпионажа и атак на защищённые сервера
+                    конкурентов.
+                  </p>
+                </div>
+
                 <div class="portfolio-info">
                   <h3 class="portfolio-name">Издание Limited Edition</h3>
                   <p class="portfolio-type">Дизайн</p>
@@ -190,14 +246,22 @@
               >
             </li>
             <li class="portfolio-item">
-              <a href="" class="portfolio-link link"
-                ><img
-                  class="portfolio-img"
-                  src="./images/portfolio/lablel_tag.jpg"
-                  alt="этикетка"
-                  width="370"
-                  height="294"
-                />
+              <a href="" class="portfolio-link link">
+                <div class="portfolio-img-overlay">
+                  <img
+                    class="portfolio-img"
+                    src="./images/portfolio/lablel_tag.jpg"
+                    alt="этикетка"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="portfolio-overlay">
+                    Технокряк это современная площадка распространения коронавируса. Компании
+                    используют эту платформу для цифрового шпионажа и атак на защищённые сервера
+                    конкурентов.
+                  </p>
+                </div>
+
                 <div class="portfolio-info">
                   <h3 class="portfolio-name">Проект LAB</h3>
                   <p class="portfolio-type">Маркетинг</p>
@@ -205,14 +269,22 @@
               >
             </li>
             <li class="portfolio-item">
-              <a href="" class="portfolio-link link"
-                ><img
-                  class="portfolio-img"
-                  src="./images/portfolio/growing_business.jpg"
-                  alt="ноутбук"
-                  width="370"
-                  height="294"
-                />
+              <a href="" class="portfolio-link link">
+                <div class="portfolio-img-overlay">
+                  <img
+                    class="portfolio-img"
+                    src="./images/portfolio/growing_business.jpg"
+                    alt="ноутбук"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="portfolio-overlay">
+                    Технокряк это современная площадка распространения коронавируса. Компании
+                    используют эту платформу для цифрового шпионажа и атак на защищённые сервера
+                    конкурентов.
+                  </p>
+                </div>
+
                 <div class="portfolio-info">
                   <h3 class="portfolio-name">Growing Business</h3>
                   <p class="portfolio-type">Приложение</p>
